--- a/matplotlib_seaborn.ipynb
+++ b/matplotlib_seaborn.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# AI in Medicine <br> Data visualization with `matplotlib`/`Seaborn`"
+    "# AI in Medicine <br> Data visualization with *matplotlib*/*Seaborn*"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook introduces data visualization in Python with `matplotlib` and `Seaborn`. The notebook consists of two  parts; while the first part introduces data visualization using the `matplotlib` library, the second part introduces the `Seaborn` library. Every part has a short introduction of the library as well as some practice excercises."
+    "This notebook introduces data visualization in Python with *matplotlib* and *Seaborn*. The notebook consists of two  parts; while the first part introduces data visualization using the *matplotlib* library, the second part introduces the *Seaborn* library. Every part has a short introduction of the library as well as some practice excercises."
    ]
   },
   {
@@ -39,15 +39,15 @@
     }
    },
    "source": [
-    "`matplotlib`\n",
-    "- Basics in `matplotlib`\n",
+    "*matplotlib*\n",
+    "- Basics in *matplotlib*\n",
     "- Generating a figure\n",
     "- Examples of different visualization methods\n",
     "- Save plot\n",
     "- Exercises\n",
     "\n",
-    "`Seaborn`\n",
-    "- Basics in `Seaborn`\n",
+    "*Seaborn*\n",
+    "- Basics in *Seaborn*\n",
     "- Examples of different visualization methods\n",
     "- Exercises"
    ]
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For an installation of the `matplotlib` library, you have to enter the following command in the terminal."
+    "For an installation of the *matplotlib* library, you have to enter the following command in the terminal."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A library is imported using the command *import*. In the following, we will use the `pyplot` module, which we will call *plt*."
+    "A library is imported using the command *import*. In the following, we will use the *pyplot* module, which we will call *plt*."
    ]
   },
   {
@@ -164,14 +164,14 @@
     "As you have already seen before, there are several common approaches to plotting with matplotlib:\n",
     "\n",
     "- object-oriented API,\n",
-    "- `pyplot` API."
+    "- *pyplot* API."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use both approaches to create figures in `matplotlib`. When using the object-oriented approach, we have to initialize the objects *Figure* and *Axes* first. This is commonly done by calling the `pyplot.figure` function and adding the *Axes* object via `pyplot.add_axes()`."
+    "We will use both approaches to create figures in *matplotlib*. When using the object-oriented approach, we have to initialize the objects *Figure* and *Axes* first. This is commonly done by calling the `pyplot.figure()` function and adding the *Axes* object via `pyplot.add_axes()`."
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When using the `pyplot` module, the initialization happens implicitly in the background."
+    "When using the *pyplot* module, the initialization happens implicitly in the background."
    ]
   },
   {
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, let's create our first plot using ```matplotlib```."
+    "So, let's create our first plot using *matplotlib*."
    ]
   },
   {
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plotting in ```matplotlib``` follows a certain rountine which includes the following steps:\n",
+    "Plotting in *matplotlib* follows a certain rountine which includes the following steps:\n",
     "\n",
     "1. Prepare data\n",
     "2. Create plot\n",
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, let's first create a small data set for a simple visualization using `matplotlib`."
+    "So, let's first create a small data set for a simple visualization using *matplotlib*."
    ]
   },
   {
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen above, when using the pure ```matplotlib``` object-oriented approach, we first have to initialize the `figure` and `Axes` objects. After that, we can simply use a plotting method on the `Axes` object. In this small example we're going to create a simple line graph."
+    "As seen above, when using the pure *matplotlib* object-oriented approach, we first have to initialize the *Figure* and *Axes* objects. After that, we can simply use a plotting method on the *Axes* object. In this small example we're going to create a simple line graph."
    ]
   },
   {
@@ -349,9 +349,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we move on, let's have a look at the ```matplotlib``` documentation of the line plot method:\n",
+    "Before we move on, let's have a look at the *matplotlib* documentation of the line plot method:\n",
     "\n",
-    "https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.axes.Axes.plot.html#matplotlib.axes.Axes.plot"
+    "https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.axes.Axes.plot.html#matplotlib.axes.Axes.plot\n",
+    "\n",
+    "Alternatively, we can use the following command to open the documentation in the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot?"
    ]
   },
   {
@@ -365,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In contrast to the object-oriented approach, we can just call the plotting function without initializing any objects in the ```pyplot``` module."
+    "In contrast to the object-oriented approach, we can just call the plotting function without initializing any objects in the *pyplot* module."
    ]
   },
   {
@@ -406,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Matplotlib` offers a huge amount of plotting methods/functions. A good starting point, so you don't have to start from scratch, is the ```matplotlib``` gallery, where you can find example code for some of these methods/functions (https://matplotlib.org/gallery/index.html). \n",
+    "*Matplotlib* offers a huge amount of plotting methods/functions. A good starting point, so you don't have to start from scratch, is the *matplotlib* gallery, where you can find example code for some of these methods/functions (https://matplotlib.org/gallery/index.html). \n",
     "\n",
     "*Note: Interestingly, just about all methods of an Axes object exist as a function in the pyplot module (and vice-versa).*"
    ]
@@ -713,7 +724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we plot the marginal distributions for the variables age and education level in one ```figure``` object, which means we need two ```Axes``` objects."
+    "Now, we plot the marginal distributions for the variables age and education level in one *Figure* object, which means we need two *Axes* objects."
    ]
   },
   {
@@ -905,7 +916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, it is possible to use several methods on the same ```Axes``` object to visualize different categories for example. "
+    "As you can see, it is possible to use several methods on the same *Axes* object to visualize different categories for example. "
    ]
   },
   {
@@ -1371,11 +1382,11 @@
     "\n",
     "- defaults are not exactly the best choices,\n",
     "- API is relatively low level,\n",
-    "- lacking compatability with ```pandas``` ```DataFrame```s\n",
+    "- lacking compatability with *pandas DataFrame*s\n",
     "\n",
-    "Adressing these drawbacks, ```Seaborn``` is statistical plotting library build on top of ```matplotlib``` and provides an API that offers sane choices for plot style and color defaults, defines simple high-level functions for common statistical plot types, and provides a close integration with ```pandas``` data structures.\n",
+    "Adressing these drawbacks, *Seaborn* is statistical plotting library build on top of *matplotlib* and provides an API that offers sane choices for plot style and color defaults, defines simple high-level functions for common statistical plot types, and provides a close integration with *pandas* data structures.\n",
     "\n",
-    "Behind the scenes, seaborn uses matplotlib to draw plots; so, if you know ```matplotlib```, you’re already halfway through ```Seaborn```. Many tasks can be accomplished with only seaborn functions, but further customization might require using ```matplotlib``` directly. "
+    "Behind the scenes, *Seaborn* uses matplotlib to draw plots; so, if you know *matplotlib*, you’re already halfway through *Seaborn*. Many tasks can be accomplished with only seaborn functions, but further customization might require using *matplotlib* directly. "
    ]
   },
   {
@@ -1389,7 +1400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For an installation of the `Seaborn` library, you have to enter the following command in the terminal."
+    "For an installation of the *Seaborn* library, you have to enter the following command in the terminal."
    ]
   },
   {
@@ -1439,7 +1450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's have a look at some of the drawbacks of ```matplotlib``` and how ```Seaborn``` adresses these."
+    "Let's have a look at some of the drawbacks of *matplotlib* and how *Seaborn* adresses these."
    ]
   },
   {
@@ -1453,7 +1464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned before, ```Seaborn``` is closely integrated with ```pandas DataFrame```s; so, for most of the functions you simply specify your data set in your plotting function and call a variable by using its header/column name. "
+    "As mentioned before, *Seaborn* is closely integrated with *pandas DataFrame*s; so, for most of the functions you simply specify your data set in your plotting function and call a variable by using its header/column name. "
    ]
   },
   {
@@ -1493,14 +1504,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, another example of the close integration with ```pandas``` can be seen in the plot; ```Seaborn``` loads the full data set and uses the selected header/column names as axis labels."
+    "Here, another example of the close integration with *pandas* can be seen in the plot; *Seaborn* loads the full data set and uses the selected header/column names as axis labels."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some plots in ```Seaborn``` don't support the option to load in the full data set and then to select a variable by its header/column name, e.g. histogram (```sns.distplot(x)```)."
+    "Some plots in *Seaborn* don't support the option to load in the full data set and then to select a variable by its header/column name, e.g. histogram (```sns.distplot(x)```)."
    ]
   },
   {
@@ -1543,7 +1554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In ```matplotlib```, tasks like plotting counts for categorical data, like you did in ex.1 and ex.2, is tedious. First, you have to count your categories and then pass these to the bar plot function. In contrast, ```Seaborn``` provides high-level functions for these tasks which will do all the work for you. Let's create the plot from ex.2."
+    "In *matplotlib*, tasks like plotting counts for categorical data, like you did in ex.1 and ex.2, is tedious. First, you have to count your categories and then pass these to the bar plot function. In contrast, *Seaborn* provides high-level functions for these tasks which will do all the work for you. Let's create the plot from ex.2."
    ]
   },
   {
@@ -1589,14 +1600,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that we don't have to build a subset for every category like in ```matplotlib```, we can simply split the data by passing a conditioning variable to the argument ```hue```."
+    "We see that we don't have to build a subset for every category like in *matplotlib*, we can simply split the data by passing a conditioning variable to the argument *hue*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another example is the visualization of joint distribution with the marginal distributions of two variables like the last example in the ```matplotlib``` section."
+    "Another example is the visualization of joint distribution with the marginal distributions of two variables like the last example in the *matplotlib* section."
    ]
   },
   {
@@ -1646,7 +1657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A small list of ```Seaborn``` functions:\n",
+    "A small list of *Seaborn* functions:\n",
     "\n",
     "- **Boxplot:** sns.boxplot(x)\n",
     "- **Violin Plot:** sns.violinplot(x)\n",
