Edit section titles (adjust from TeachOpenCADD to AI course)

--- a/02_numpy_pandas.ipynb
+++ b/02_numpy_pandas.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Aims of this talktorial/session\n",
+    "## 1. Aims of this session\n",
     "\n",
     "TBA"
    ]
@@ -33,7 +33,6 @@
     "### Theory\n",
     "\n",
     "* Data science - what is that?\n",
-    "* Python packages for data science\n",
     "* The *numpy* library\n",
     "* The *pandas* library\n",
     "\n",
@@ -68,15 +67,6 @@
     "## 4. Theory\n",
     "\n",
     "### Data Science\n",
-    "\n",
-    "TBA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Python packages for data science\n",
     "\n",
     "TBA"
    ]
@@ -4957,7 +4947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Discussion\n",
+    "## 6. Summary\n",
     "\n",
     "TBA"
    ]
