Add questions to sklearn nb

--- a/04_machine-learning-and-scikit-learn.ipynb
+++ b/04_machine-learning-and-scikit-learn.ipynb
@@ -35,10 +35,9 @@
     "## Practical\n",
     "\n",
     "* Prepare your data\n",
-    "* Apply Linear Regression to _solve scientific question 1_\n",
-    "* Apply Random Forests to _solve scientific question 2_\n",
-    "* Apply Support Vector Machines to _solve scientific question 3_\n",
-    "* Apply k-means clustering to _solve scientific question 4_\n",
+    "* Use regression to find correlations between MMSE and hippocampus volume\n",
+    "* Apply Random Forests to predict Alzheimer's disease based on volumetric measurements and other variables\n",
+    "* Cluster with k-means to guess the thresholds used for MMSE-based diagnosis\n",
     "* Validate your models"
    ]
   },
@@ -154,6 +153,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Some questions:\n",
+    "\n",
+    "* Classification: Is MMSE connected to Alzheimer's? MMSE is a 30-question test.\n",
+    "* Classification: ADASQ4 would also be nice, but lots of NaN\n",
+    "* DX is the simplified version. Use that instead of DX_bl.\n",
+    "* Regression: Volumetric measurements, specially in the hippocampus + ventricles can correlate to dementia\n",
+    "    * Does the hc volume correlate to questionnaire\n",
+    "* Whole brain volumes should NOT correlate\n",
+    "* Cluster by sex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prepare your data\n",
     "\n",
     "Before we can use the supplied data, we need to select and transform the parts we are interested in. Then, we will perform a 80/20 split, leaving it ready for analysis."
@@ -161,25 +175,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data as cleaned in day two\n",
+    "# df = pd.read_csv(\"../data/alzheimers_disease_reduced.csv\")\n",
+    "df = pd.read_csv(\"data/alzheimers_disease.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14532, 109)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14532 entries, 0 to 14531\n",
+      "Columns: 109 entries, RID to update_stamp\n",
+      "dtypes: float64(87), int64(5), object(17)\n",
+      "memory usage: 12.1+ MB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RID</th>\n",
+       "      <th>VISCODE</th>\n",
+       "      <th>SITE</th>\n",
+       "      <th>EXAMDATE</th>\n",
+       "      <th>DX_bl</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PTGENDER</th>\n",
+       "      <th>PTEDUCAT</th>\n",
+       "      <th>WORK</th>\n",
+       "      <th>PTETHCAT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TAU_bl</th>\n",
+       "      <th>PTAU_bl</th>\n",
+       "      <th>FDG_bl</th>\n",
+       "      <th>PIB_bl</th>\n",
+       "      <th>AV45_bl</th>\n",
+       "      <th>Years_bl</th>\n",
+       "      <th>Month_bl</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>M</th>\n",
+       "      <th>update_stamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>bl</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2005-09-08</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>74.3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>16</td>\n",
+       "      <td>technical writer and editor</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.36665</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-12-04 04:19:56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>bl</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2005-09-12</td>\n",
+       "      <td>AD</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Secretary</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>...</td>\n",
+       "      <td>239.7</td>\n",
+       "      <td>22.83</td>\n",
+       "      <td>1.08355</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-12-04 04:19:56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>m06</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2006-03-13</td>\n",
+       "      <td>AD</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Elementary school teacher</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>...</td>\n",
+       "      <td>239.7</td>\n",
+       "      <td>22.83</td>\n",
+       "      <td>1.08355</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.498289</td>\n",
+       "      <td>5.96721</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2019-12-04 04:19:56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>m12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2006-09-12</td>\n",
+       "      <td>AD</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Communication</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>...</td>\n",
+       "      <td>239.7</td>\n",
+       "      <td>22.83</td>\n",
+       "      <td>1.08355</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.999316</td>\n",
+       "      <td>11.96720</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2019-12-04 04:19:56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>m24</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2007-09-12</td>\n",
+       "      <td>AD</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>Not Hisp/Latino</td>\n",
+       "      <td>...</td>\n",
+       "      <td>239.7</td>\n",
+       "      <td>22.83</td>\n",
+       "      <td>1.08355</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.998630</td>\n",
+       "      <td>23.93440</td>\n",
+       "      <td>24</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2019-12-04 04:19:56.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 109 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   RID VISCODE  SITE    EXAMDATE DX_bl   AGE PTGENDER  PTEDUCAT  \\\n",
+       "0    2      bl    11  2005-09-08    CN  74.3     Male        16   \n",
+       "1    3      bl    11  2005-09-12    AD  81.3     Male        18   \n",
+       "2    3     m06    11  2006-03-13    AD  81.3     Male        18   \n",
+       "3    3     m12    11  2006-09-12    AD  81.3     Male        18   \n",
+       "4    3     m24    11  2007-09-12    AD  81.3     Male        18   \n",
+       "\n",
+       "                          WORK         PTETHCAT  ... TAU_bl PTAU_bl   FDG_bl  \\\n",
+       "0  technical writer and editor  Not Hisp/Latino  ...    NaN     NaN  1.36665   \n",
+       "1                    Secretary  Not Hisp/Latino  ...  239.7   22.83  1.08355   \n",
+       "2    Elementary school teacher  Not Hisp/Latino  ...  239.7   22.83  1.08355   \n",
+       "3                Communication  Not Hisp/Latino  ...  239.7   22.83  1.08355   \n",
+       "4                   Accounting  Not Hisp/Latino  ...  239.7   22.83  1.08355   \n",
+       "\n",
+       "   PIB_bl  AV45_bl  Years_bl  Month_bl Month     M           update_stamp  \n",
+       "0     NaN      NaN  0.000000   0.00000     0   0.0  2019-12-04 04:19:56.0  \n",
+       "1     NaN      NaN  0.000000   0.00000     0   0.0  2019-12-04 04:19:56.0  \n",
+       "2     NaN      NaN  0.498289   5.96721     6   6.0  2019-12-04 04:19:56.0  \n",
+       "3     NaN      NaN  0.999316  11.96720    12  12.0  2019-12-04 04:19:56.0  \n",
+       "4     NaN      NaN  1.998630  23.93440    24  24.0  2019-12-04 04:19:56.0  \n",
+       "\n",
+       "[5 rows x 109 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print some info\n",
+    "print(df.shape)\n",
+    "print(df.info())\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In `sklearn`, the naming convention states that:\n",
+    "\n",
+    "- `X` (uppercase) refers to the dataset containing the known data; e.g. MMSE scores, hippocampus volume\n",
+    "- `y` (lowercase) refers to the labels (unknowns) of that data; e.g. diagnosis\n",
+    "\n",
+    "One of the first tasks you will need to do will be separating the dataframe into the useful parts for each question. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['MMSE']\n",
+    "y = df['DX']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before running to analyze the data, though, there are some quality check strategies we can consider. One of the easiest to implement is a test-train split; i.e. \"hide\" some of the data from the model as a \"test\" set which we'll use to verify if the predictions are useful outside the training set. One common split is 20% test, 80% train. The library `sklearn` contains an utility function for this precise action:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test =  train_test_split(X, y, test_size=0.2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply Random Forests to _solve scientific question 1_\n",
+    "### Use regression to find correlations between MMSE and hippocampus volume\n",
     "\n",
-    "Explain what you will do."
+    "MMSE tests are used to diagnose AD. Low scoring participants are often diagnosed with some kind of cognitive impairment. Some literature references that a reduced hippocampus volume might correlate with some forms of dementia. Would you be able to find a correlation between MMSE scores and hippocampus volume? Let's see if we can find it with linear regression."
    ]
   },
   {
@@ -200,9 +484,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply Support Vector Machines to _solve scientific question 2_\n",
+    "### Apply Random Forests to predict Alzheimer's disease based on volumetric measurements and other variables\n",
     "\n",
-    "Explain what you will do."
+    "Literature shows that some volumetric measurements on the brain has been shown to correlate with the development of the disease. Let's check if that's true.\n",
+    "\n",
+    "The dataset we are using contains information on several volumetric measurements. Namely:\n",
+    "\n",
+    "- Ventricles\n",
+    "- Hippocampus\n",
+    "- Entorhinal cortex\n",
+    "- Fusiform gyrus\n",
+    "\n",
+    "Can those be accurate descriptors for AD?"
    ]
   },
   {
@@ -223,9 +516,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply k-means clustering to _solve scientific question 3_\n",
+    "### Cluster with k-means to guess the thresholds used for MMSE-based diagnosis\n",
     "\n",
-    "Explain what you will do."
+    "1. Throw in MMSE, volumetric data (all we have used so far) to a dimensionality reduction algo\n",
+    "2. Cluster the PCA/whatever with k-means\n",
+    "3. Label the data points and see if they can -see- they five or three groups"
    ]
   },
   {
