Add linear regression too

--- a/04_machine-learning-and-scikit-learn.ipynb
+++ b/04_machine-learning-and-scikit-learn.ipynb
@@ -35,9 +35,10 @@
     "## Practical\n",
     "\n",
     "* Prepare your data\n",
-    "* Apply Random Forests to _solve scientific question 1_\n",
-    "* Apply Support Vector Machines to _solve scientific question 2_\n",
-    "* Apply k-means clustering to _solve scientific question 3_\n",
+    "* Apply Linear Regression to _solve scientific question 1_\n",
+    "* Apply Random Forests to _solve scientific question 2_\n",
+    "* Apply Support Vector Machines to _solve scientific question 3_\n",
+    "* Apply k-means clustering to _solve scientific question 4_\n",
     "* Validate your models"
    ]
   },
